[build-system]
requires = ["setuptools>=82.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Scintillator-Signal-Classification"
version = "0.1.0"
description = "Hackathon Submission Repo for 'Signal types classification' Challenge"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}


dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.13.4",
    "pandas>=3.0.1",
    "numpy>=2.4.4",
    "plotly>=6.7.0",
    "statsmodels>=0.14.6",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.11.0",
    "ruff>=0.15.2",
    "notebook>=7.5.6",
    "kaggle>=2.1.2",
    "skops>=0.14.0",
]
